map component - make sure attribution and zoom controls are visible

--- a/client/src/components/Mapa.css
+++ b/client/src/components/Mapa.css
@@ -14,3 +14,7 @@
 .map-title button {
   font-weight: bolder;
 }
+
+.leaflet-control-container .leaflet-bottom {
+  z-index: 9999;
+}
